# GameEngine

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  conanfile.py  todo.task
Resources/shaders/: cubeRender.frag  cubeRender.vert  cubemap.vert  diffuseIrrandiance.frag  hdriToCube.frag  pbr.frag  shader.frag  shader.hlsl  shader.vert  shell.bat  skybox_shader.frag  skybox_shader.vert
assets/shaders/: RenderState.inc  SceneTextures.inc  bakedBRDF.frag  bakedBRDF.vert  brdf.inc  common.vert  cubeToPrefilterSpecular.frag  diffuseIrrandiance.frag  gbuffer.frag  gbuffer.vert  hdriToCube.frag  light.vert  pbr.frag  pbr.vert  skybox.frag  skybox.vert  triangle.frag  triangle.vert
assets/shaders/GL/: GoldAndSilver.frag  basic_light.frag  basic_light.vert  camera.frag  camera.vert  color.frag  common.vert  cube.frag  cube.vert  diection_light.frag  diection_light.vert  diffuse.frag  hdriToCubemap.frag  light.frag  light_cube.frag  light_cube.vert  material.frag  material.vert  pbr.frag  pbr.vert  point_light.frag  skybox.frag  skybox.vert  spot_light.frag  spot_light.vert  stripe.frag  stripe.vert  trace.frag  trace.vert  triangle.vert
assets/shaders/common/: RenderState.inc  SceneTextures.inc  brdf.inc
assets/shaders/deffered/: gbuffer.frag  gbuffer.inc  gbuffer.vert  skylight_deffered.frag  skylight_deffered.vert
assets/shaders/light/: sky_light.inc
cmake/: FindShaderC.cmake  FindVulkan.cmake  nasm.py  toolchain.cmake  vulkan.cmake  vulkan.py
docs/: Vulkan.md
examples/: ShadowMap.cpp
shaders/: shader.frag  shader.vert
src/: CMakeLists.txt  macro.h  main.cpp  vulkan_application.h
src/Entity/: camera.cpp  camera.h  light.cpp  light.h  material.h
src/Graphics/GL/: CMakeLists.txt  Event.cpp  Event.h  GLApplication.cpp  GLApplication.h  GLBuffer.hpp  GLContext.cpp  GLContext.h  GLMesh.cpp  GLMesh.h  GLObject.cpp  GLObject.h  GLProgram.h  GLQuery.h  GLRender.cpp  GLRender.h  GLSampler.cpp  GLSampler.h  GLShader.cpp  GLShader.h  GLTexture.h  GLTransferFeedBack.cpp  GLTransferFeedBack.h  GLUtils.cpp  GLUtils.h  GObject.hpp  ImGuiRender.cpp  ImGuiRender.h  Texture2D.cpp  Texture2D.h  TextureCubeMap.cpp  TextureCubeMap.h  TextureTraits.h  UniformBlock.cpp  UniformBlock.h  VAO.cpp  VAO.h  main.cpp  texture_allocator.hpp
src/Graphics/GL/Buffer/: GLBuffer.hpp  GLFrameBuffer.h  GLPixelBuffer.h  GLSSBO.hpp  GLShaderMemory.cpp  GLUniformBuffer.h  GLVertexBuffer.cpp  GLVertexBuffer.h
src/Graphics/Vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanCubemapRender.cpp  VulkanCubemapRender.h  VulkanDescriptorSetLayoutBuilder.h  VulkanGraphicsPipelineBuilder.h  VulkanImGuiRender.cpp  VulkanImGuiRender.h  VulkanMesh.cpp  VulkanMesh.h  VulkanPipelineLayoutBuilder.cpp  VulkanPipelineLayoutBuilder.h  VulkanRender.cpp  VulkanRender.h  VulkanResourceManager.cpp  VulkanResourceManager.h  VulkanShader.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTexture2DRender.h  VulkanUtils.cpp
src/app/: Application.cpp  Application.h  ApplicationResource.cpp  ApplicationResource.h  ImGuiRender.cpp  ImGuiRender.h  Macro.h  Render.cpp  Render.h  RenderGraph.cpp  RenderGraph.h  RenderState.h  ResourceManager.cpp  ResourceManager.h  VulkanApplication.cpp  VulkanApplication.h  VulkanContext.cpp  VulkanContext.h  VulkanCubemapRender.cpp  VulkanCubemapRender.h  VulkanDescriptorSetLayoutBuilder.cpp  VulkanDescriptorSetLayoutBuilder.h  VulkanGraphicsPipelineBuilder.cpp  VulkanGraphicsPipelineBuilder.h  VulkanImGuiRender.cpp  VulkanImGuiRender.h  VulkanMesh.cpp  VulkanMesh.h  VulkanPipelineLayoutBuilder.cpp  VulkanPipelineLayoutBuilder.h  VulkanRender.cpp  VulkanRender.h  VulkanRenderContext.cpp  VulkanRenderContext.h  VulkanRenderData.cpp  VulkanRenderData.h  VulkanRenderPassBuilder.cpp  VulkanRenderPassBuilder.h  VulkanRenderScene.cpp  VulkanRenderScene.h  (+26 more)
src/backend/: API.cpp  API.h  driver.cpp  driver.h
src/backend/CPU/: ray.h  vec3.h
src/backend/GL/: CMakeLists.txt  GLApplication.cpp  GLApplication.h  GLContext.h  GLCubeMapRender.cpp  GLCubeMapRender.h  GLMesh.cpp  GLMesh.h  GLObject.h  GLPipeline.cpp  GLPipeline.h  GLProgram.cpp  GLProgram.h  GLQuery.cpp  GLQuery.h  GLRender.cpp  GLRender.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLUitils.cpp  GLUitils.h  ImGuiRender.cpp  ImGuiRender.h  TextureTraits.h  VAO.cpp  VAO.h  Vertex.h  glad.c  glad.h  main.cpp
src/backend/GL/Buffer/: GLBuffer.hpp  GLFrameBuffer.cpp  GLFrameBuffer.h  GLPixelBuffer.cpp  GLPixelBuffer.h  GLSSBO.hpp  GLShaderMemory.cpp  GLUniformBuffer.cpp  GLUniformBuffer.h  GLVertexBuffer.cpp
src/backend/Vulkan/: CMakeLists.txt  DescriptorSetCache.cpp  DescriptorSetCache.h  DescriptorSetLayoutCache.cpp  DescriptorSetLayoutCache.h  Device.cpp  Device.h  ImageViewCache.cpp  ImageViewCache.h  Macro.h  PipelineCache.cpp  PipelineCache.h  PipelineLayoutCache.cpp  PipelineLayoutCache.h  RenderGraph.cpp  RenderGraph.h  RenderUtils.cpp  RenderUtils.h  Scene.cpp  Scene.h  SkyLight.cpp  SkyLight.h  Utils.cpp  Utils.h  VulkanContext.cpp  VulkanContext.h  VulkanCubemapRender.cpp  VulkanCubemapRender.h  VulkanDescriptorSetLayoutBuilder.cpp  VulkanDescriptorSetLayoutBuilder.h  VulkanGraphicsPipelineBuilder.cpp  VulkanGraphicsPipelineBuilder.h  VulkanImGuiRender.cpp  VulkanImGuiRender.h  VulkanMesh.cpp  VulkanMesh.h  VulkanPipelineLayoutBuilder.cpp  VulkanPipelineLayoutBuilder.h  VulkanRender.cpp  VulkanRender.h  (+27 more)
src/backend/core/: CMakeLists.txt  Mesh.cpp  Mesh.h  Vertex.cpp  Vertex.h  Window.cpp  Window.h  file.cpp  file.h  string_utils.h  typedef.h  utils.h
src/utils/: GL.h  GLAPITrace.cpp  GLAPITrace.h  GetAPI.py  funcs_list.txt  glcorearb.h
